Refactor: CollegeRepository 인터페이스화
- CollegeRepository를 인터페이스로 변환
- JPA Repository를 감싸는 구현체 CollegeRepositoryImpl 구현
- CollegeService 및 테스트 코드가 인터페이스를 사용하도록 수정